// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commom/components/panel tests should render as expected when passing required properties 1`] = `
<div
  className="card"
>
  <Component
    title="test title"
  />
  <Component>
    <h2>
      Test children component
    </h2>
  </Component>
</div>
`;

exports[`commom/components/panel tests should render as expected when passing required properties 2`] = `
<Component
  title="test title"
>
  <div
    className="card"
  >
    <Component
      title="test title"
    >
      <div
        className="card-header header"
      >
        <h3
          className="panel-title"
        >
          test title
        </h3>
      </div>
    </Component>
    <Component>
      <ul
        className="list-group list-group-flush"
      >
        <li
          className="list-group-item"
        >
          <h2>
            Test children component
          </h2>
        </li>
      </ul>
    </Component>
  </div>
</Component>
`;
